# usb_manager

./: .clang-format  OAT.xml  README.en.md  README.md  README_zh.md  bundle.json  ohos.build  usbmgr.gni
frameworks/dialog/dialog_ui/js/: BUILD.gn
frameworks/dialog/dialog_ui/js/i18n/: en-US.json  zh-CN.json
frameworks/dialog/dialog_ui/js/pages/index/: index.css  index.hml  (+1 more)
hdi/: BUILD.gn
hdi/client/: BUILD.gn
hdi/client/include/: readme.md  usb_errors.h  usb_param.h  usbd_client.h  usbd_subscriber.h  usbd_type.h
hdi/client/src/: usbd_client.cpp  usbd_subscriber.cpp
hdi/service/: BUILD.gn
hdi/service/include/: usbd.h
hdi/service/src/: usbd.c  usbd_dispatcher.c  usbd_function.c  usbd_port.c  usbd_publisher.c
interfaces/innerkits/: BUILD.gn
interfaces/innerkits/native/include/: iusb_srv.h  usb_config.h  usb_device.h  usb_device_pipe.h  usb_endpoint.h  usb_interface.h  usb_port.h  usb_request.h  usb_srv_client.h  usb_srv_support.h  usbd_bulk_callback.h
interfaces/innerkits/native/src/: usb_device.cpp  usb_device_pipe.cpp  usb_request.cpp  usb_srv_client.cpp  usbd_bulk_callback.cpp
interfaces/kits/java/: BUILD.gn
interfaces/kits/js/: @ohos.usb.d.ts
interfaces/kits/js/napi/: BUILD.gn
interfaces/kits/js/napi/include/: napi_util.h  usb_async_context.h
interfaces/kits/js/napi/src/: napi_util.cpp  usb_info.cpp
sa_profile/: 4201.xml  BUILD.gn
services/: BUILD.gn  usb_serveice.cfg  usb_service.cfg
services/native/include/: usb_descriptor_parser.h  usb_device_manager.h  usb_function_manager.h  usb_host_manager.h  usb_port_manager.h  usb_right_manager.h  usb_serial_reader.h  usb_server_event_handler.h  usb_service.h  usb_service_subscriber.h
services/native/src/: usb_descriptor_parser.cpp  usb_device_manager.cpp  usb_function_manager.cpp  usb_host_manager.cpp  usb_port_manager.cpp  usb_right_manager.cpp  usb_serial_reader.cpp  usb_server_event_handler.cpp  usb_service.cpp  usb_service_subscriber.cpp
services/zidl/: iusb_server.zidl
services/zidl/include/: usb_server_proxy.h  usb_server_stub.h
services/zidl/src/: usb_srv_proxy.cpp  usb_srv_stub.cpp
test/common/include/: usb_callback_test.h
test/fuzztest/: BUILD.gn
test/fuzztest/common/include/: usb_common_fuzz.h
test/fuzztest/common/src/: usb_common_fuzz.cpp
test/fuzztest/usbmgrbulkcancel_fuzzer/: usbmgrbulkcancel_fuzzer.cpp  usbmgrbulkcancel_fuzzer.h
test/fuzztest/usbmgrbulkread_fuzzer/: usbmgrbulkread_fuzzer.cpp  usbmgrbulkread_fuzzer.h
test/fuzztest/usbmgrbulkwrite_fuzzer/: usbmgrbulkwrite_fuzzer.cpp  usbmgrbulkwrite_fuzzer.h
test/fuzztest/usbmgrbultransfer_fuzzer/: usbmgrbultransfer_fuzzer.cpp  usbmgrbultransfer_fuzzer.h
test/fuzztest/usbmgrclaiminterface_fuzzer/: usbmgrclaiminterface_fuzzer.cpp  usbmgrclaiminterface_fuzzer.h
test/fuzztest/usbmgrclose_fuzzer/: usbmgrclose_fuzzer.cpp  usbmgrclose_fuzzer.h
test/fuzztest/usbmgrcontroltransfer_fuzzer/: usbmgrcontroltransfer_fuzzer.cpp  usbmgrcontroltransfer_fuzzer.h
test/fuzztest/usbmgrgetfiledescriptor_fuzzer/: usbmgrgetfiledescriptor_fuzzer.cpp  usbmgrgetfiledescriptor_fuzzer.h
test/fuzztest/usbmgrgetrawdescriptors_fuzzer/: usbmgrgetrawdescriptors_fuzzer.cpp  usbmgrgetrawdescriptors_fuzzer.h
test/fuzztest/usbmgrgetsupportedmodes_fuzzer/: usbmgrgetsupportedmodes_fuzzer.cpp  usbmgrgetsupportedmodes_fuzzer.h
test/fuzztest/usbmgrhasright_fuzzer/: usbmgrhasright_fuzzer.cpp  usbmgrhasright_fuzzer.h
test/fuzztest/usbmgrpiperequestwait_fuzzer/: usbmgrpiperequestwait_fuzzer.cpp  usbmgrpiperequestwait_fuzzer.h
test/fuzztest/usbmgrregbulkcallback_fuzzer/: usbmgrregbulkcallback_fuzzer.cpp  usbmgrregbulkcallback_fuzzer.h
test/fuzztest/usbmgrreleaseinterface_fuzzer/: usbmgrreleaseinterface_fuzzer.cpp  usbmgrreleaseinterface_fuzzer.h
test/fuzztest/usbmgrremoveright_fuzzer/: usbmgrremoveright_fuzzer.cpp  usbmgrremoveright_fuzzer.h
test/fuzztest/usbmgrrequestfree_fuzzer/: usbmgrrequestfree_fuzzer.cpp  usbmgrrequestfree_fuzzer.h
test/fuzztest/usbmgrrequestinitialize_fuzzer/: usbmgrrequestinitialize_fuzzer.cpp  usbmgrrequestinitialize_fuzzer.h
test/fuzztest/usbmgrrequestqueue_fuzzer/: usbmgrrequestqueue_fuzzer.cpp  usbmgrrequestqueue_fuzzer.h
test/fuzztest/usbmgrrequestright_fuzzer/: usbmgrrequestright_fuzzer.cpp  usbmgrrequestright_fuzzer.h
test/fuzztest/usbmgrsetconfiguration_fuzzer/: usbmgrsetconfiguration_fuzzer.cpp  usbmgrsetconfiguration_fuzzer.h
test/fuzztest/usbmgrsetcurrentfunctions_fuzzer/: usbmgrsetcurrentfunctions_fuzzer.cpp  usbmgrsetcurrentfunctions_fuzzer.h
test/fuzztest/usbmgrsetinterface_fuzzer/: usbmgrsetinterface_fuzzer.cpp  usbmgrsetinterface_fuzzer.h
test/fuzztest/usbmgrsetportrole_fuzzer/: usbmgrsetportrole_fuzzer.cpp  usbmgrsetportrole_fuzzer.h
test/fuzztest/usbmgrunregbulkcallback_fuzzer/: usbmgrunregbulkcallback_fuzzer.cpp  usbmgrunregbulkcallback_fuzzer.h
test/fuzztest/usbmgrusbfunctionsfromstring_fuzzer/: usbmgrusbfunctionsfromstring_fuzzer.cpp  usbmgrusbfunctionsfromstring_fuzzer.h
test/fuzztest/usbmgrusbfunctionstostring_fuzzer/: usbmgrusbfunctionstostring_fuzzer.cpp  usbmgrusbfunctionstostring_fuzzer.h
test/native/: BUILD.gn
test/native/hdi_unittest/: BUILD.gn
test/native/hdi_unittest/src/: usbd_device_test.cpp  usbd_function_test.cpp  usbd_transfer_test.cpp
test/native/js_unittest/: CheckEmptyUtils.js  DateAndTimeUtil.js  EventConstants.js  ListUsb.test.js  UsbCoreJsunit.test.js  UsbCoreJsunitEx.test.js  UsbDevicePipeJsunit.test.js  UsbDevicePipeJsunitEx.test.js  UsbFunctionsJsunit.test.js  UsbFunctionsJsunitEx.test.js  UsbPortJsunit.test.js  UsbPortJsunitEx.test.js
test/native/service_unittest/: BUILD.gn
test/native/service_unittest/include/: usb_bulkcallback_test.h  usb_core_test.h  usb_device_pipe_test.h  usb_request_test.h
test/native/service_unittest/src/: usb_bulkcallback_test.cpp  usb_callback_test.cpp  usb_core_test.cpp  usb_device_pipe_test.cpp  usb_event_test.cpp  usb_request_test.cpp
test/tool/: BUILD.gn  usb_function_port_test.cpp
utils/: BUILD.gn
utils/native/include/: delayed_sp_singleton.h  hilog_wrapper.h  usb_common.h  usb_errors.h  usb_param.h
