# Copyright (c) 2021-2022 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//base/usb/usb_manager/usbmgr.gni")

config("usbsrv_private_config") {
  include_dirs = [
    "${usb_manager_path}/services/zidl/include",
    "//third_party/jsoncpp/include/json",
  ]
}

config("usbsrv_public_config") {
  include_dirs = [ "native/include" ]
}

ohos_shared_library("usbsrv_client") {
  sources = [
    "${usb_manager_path}/services/zidl/src/usb_srv_proxy.cpp",
    "native/src/usb_device_pipe.cpp",
    "native/src/usb_request.cpp",
    "native/src/usb_srv_client.cpp",
    "native/src/usbd_bulk_callback.cpp",
  ]

  configs = [
    "${utils_path}:utils_config",
    ":usbsrv_private_config",
    ":usbsrv_public_config",
  ]

  public_configs = [ ":usbsrv_public_config" ]

  deps = [ "//third_party/jsoncpp:jsoncpp" ]

  external_deps = [
    "eventhandler:libeventhandler",
    "hiviewdfx_hilog_native:libhilog",
    "ipc:ipc_core",
    "safwk:system_ability_fwk",
    "samgr_standard:samgr_proxy",
    "usb_device_driver_interface:usbd_client",
    "utils_base:utils",
  ]

  part_name = "usb_manager"
}
