# Copyright (c) 2021-2022 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//base/usb/usb_manager/usbmgr.gni")
import("//build/test.gni")

config("usbsrv_private_config") {
  include_dirs = []
}

ohos_executable("usb_function_port_test") {
  sources = [ "usb_function_port_test.cpp" ]
  configs = [
    "${utils_path}:utils_config",
    ":usbsrv_private_config",
  ]
  deps = [ "${usb_manager_path}/interfaces/innerkits:usbsrv_client" ]
  external_deps = [
    "hiviewdfx_hilog_native:libhilog",
    "ipc:ipc_core",
    "usb_device_driver:usbd_client",
    "utils_base:utils",
  ]
  install_enable = false
  subsystem_name = "usb"
  part_name = "usb_manager"
}
