# Copyright (c) 2021 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//base/usb/usb_manager/usbmgr.gni")

config("usbnapi_private_config") {
  include_dirs = [
    "//drivers/peripheral/usb/hal/client/include",
    "//foundation/ace/napi/native_engine",
    "//foundation/ace/napi/interfaces/kits",
    "//utils/system/safwk/native/include",
    "//third_party/node/src",
    "//base/usb/usb_manager/interfaces/kits/js/napi/include",
    "//base/usb/usb_manager/interfaces/innerkits/native/include",
    "//foundation/distributedschedule/samgr/interfaces/innerkits/samgr_proxy/include",
    "//foundation/distributedschedule/samgr/adapter/interfaces/innerkits/include",
  ]
}

ohos_shared_library("usb") {
  sources = [
    "src/napi_util.cpp",
    "src/usb_info.cpp",
  ]
  configs = [
    "${utils_path}:utils_config",
    ":usbnapi_private_config",
  ]
  deps = [
    "//base/usb/usb_manager/interfaces/innerkits:usbsrv_client",
    "//drivers/peripheral/usb/hal/client:usbd_client",
    "//foundation/ace/napi:ace_napi",
    "//utils/native/base:utils",
  ]
  external_deps = [
    "hiviewdfx_hilog_native:libhilog",
    "ipc:ipc_core",
  ]

  relative_install_dir = "module"

  subsystem_name = "usb"
  part_name = "usb_manager"
}
