# Copyright (c) 2021-2022 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//base/usb/usb_manager/usbmgr.gni")

config("usbnapi_private_config") {
  include_dirs = [
    "//foundation/ace/napi/native_engine",
    "//foundation/ace/napi/interfaces/kits",
    "//third_party/node/src",
    "${usb_manager_path}/interfaces/kits/js/napi/include",
    "${usb_manager_path}/interfaces/innerkits/native/include",
  ]
}

ohos_shared_library("usb") {
  sources = [
    "src/napi_util.cpp",
    "src/usb_info.cpp",
  ]
  configs = [
    "${utils_path}:utils_config",
    ":usbnapi_private_config",
  ]
  deps = [
    "${usb_manager_path}/interfaces/innerkits:usbsrv_client",
    "//foundation/ace/napi:ace_napi",
  ]
  external_deps = [
    "hiviewdfx_hilog_native:libhilog",
    "ipc:ipc_core",
    "samgr_standard:lsamgr",
    "usb_device_driver:usbd_client",
    "utils_base:utils",
  ]

  relative_install_dir = "module"

  subsystem_name = "usb"
  part_name = "usb_manager"
}
